# EEGAnalyzer-SciCo

./: .gitignore  README.md  Readme_ai.md  new_idea.md  pyproject.toml  requirements.txt  requirements_new.txt  requiremnts_new.txt  setup.cfg  setup.py
Analysis_Scripts/: Compute_metrics_from_annotation.py  Metrics.py  Michels_code_translation.py  apply_script_to_bids_folder.py  apply_script_to_csv.py  blank_config_fromCSV.yaml
Analysis_Scripts_old/: Compute_metrics_from_annotation.py  Metrics.py  apply_script_to_bids_folder.py  apply_script_to_csv.py  blank_config_fromFolder.yaml
Artificial_signal_tests/: Lorenz_config_csv.yaml  Remove_Transients_Logistic_map.py  create_simple_mock_signal_frame.py  log_map_config_csv.yaml  mock_signal_config_csv.yaml
Artificial_signal_tests/Metric_exploration/: 3dPlot.py  LargestLyapunov.md  Largest_Lyapunov.md  Largest_Lyapunov2.md  Largest_Lyapunov_exponent.py  Lempel Ziv complexity.md  Lempel_Ziv_complexity.py
Artificial_signal_tests/ODE_solving/: Logistic_map.py  LorenzSystem.py  PlotLorenzTrace.py  Visualize_Logistic_map.ipynb
Artificial_signal_tests/metrics/Lorenz/: analyse_Lorenz_metrics.py
Artificial_signal_tests/metrics/linmap/: VisualizeMetrics.ipynb  (+3 more)
OOP_Analyzer/: Alchemist.py  Array_processor.py  Buttler.py  CSV_processor.py  EEG_processor.py  apply_script_to_bids_folder_oop.py
eeg_reading_and_preprocessing/: Inspect_and_preprocess_eeg.ipynb  PreprocessingFunctions.py  eeg_preprocessing_pipeline.py  eeg_preprocessing_pipeline_withmultiprocessing.py  preprocess_advanced.py  preprocess_and_inspect.py  preprocess_fast.py
eeganalyzer/: __init__.py
eeganalyzer/cli/: cli.py
eeganalyzer/core/: __init__.py  array_processor.py  csv_processor.py  eeg_processor.py  metrics.py  processor.py
eeganalyzer/example/: __init__.py  example_config_eeg.yaml
eeganalyzer/gui/: run_metrics_viewer.py
eeganalyzer/utils/: buttler.py  config.py  database.py
example/: example_config_eeg.yaml  example_config_fromFolder.yaml  metric_analysis_example.py  metrics.py  plot_eeg_multiprocess.py
gui/: README.md  install_dependencies.py  metrics_viewer.py  plotting_oneshot.py  run_metrics_viewer.py  test_structure.py
gui/metrics_viewer/: __init__.py  app.py  database_handler.py  mne_plot_helper.py  plot_frame.py  selection_frame.py  utils.py
reproduction/: DataAndMetricsOfStudy.md  EEGPreprocessing.md  Properties.md  annotation_length_analysis.py  avalanche_config.yaml  base_config.yaml  criticallity_config.yaml  custom_metric_functions.py  edge_of_chaos_config.yaml  metrics.py  reproduction_metrics.py
src/eeganalyzer/: __init__.py
src/gui/: run_metrics_viewer.py  run_preprocessing_viewer.py
(+18 files in other folders)
