[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "eeganalyzer-scico"
version = "0.2.1"
authors = [
    {name = "SoenkevL", email = "soenke.v.l@outlook.com"},
]
description = "A comprehensive tool for analyzing and visualizing EEG data with focus on customizable metric analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "mne==1.8.0",
    "numpy>=1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "neurokit2==0.2.10",
    "PyQt6==6.7.1",
    "customtkinter==5.2.2",
    "mne-qt-browser==0.6.3",
    "matplotlib==3.9.2",
    "PyYAML==6.0.2",
    "mat4py==0.6.0",
    "SQLAlchemy>=2.0.40",
    "powerlaw==1.5",
    "edgeofpy==0.0.1",
    "icecream==2.1.3",
    "multiprocesspandas==1.1.5",
]

[project.urls]
"Homepage" = "https://github.com/SoenkevL/EEGAnalyzer"
"Bug Tracker" = "https://github.com/SoenkevL/EEGAnalyzer/issues"

[project.scripts]
eeganalyzer = "eeganalyzer.cli.cli:main"
metricviewer = "gui.run_metrics_viewer:main"
preprocessor = "gui.run_preprocessing_viewer:main"