[metadata]
name = eeganalyzer
version = 0.1.0
author = SoenkevL
author_email = soenke.v.l@outlook.com
description = A comprehensive tool for analyzing and visualizing EEG data with focus on customizable metric analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SoenkevL/EEGAnalyzer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Bio-Informatics
python_requires = >=3.8

[options]
packages = find:
install_requires =
    edgeofpy==0.0.1
    icecream==2.1.3
    customtkinter==5.2.2
    mat4py==0.6.0
    matplotlib==3.9.2
    mne==1.8.0
    mne-qt-browser==0.6.3
    multiprocesspandas==1.1.5
    neurokit2==0.2.10
    numpy==1.26.4
    pandas==2.2.3
    powerlaw==1.5
    PyYAML==6.0.2
    PyQt6==6.7.1
    scipy==1.14.1
    SQLAlchemy>=2.0.40
include_package_data = true
package_data =
    eeganalyzer = example/*.yaml

[options.entry_points]
console_scripts =
    eeganalyzer = eeganalyzer.cli.cli:main
    eegviewer = eeganalyzer.gui.run_metrics_viewer:main